src/objects/LearningLog__c.object
<CustomObject>
    <fields>
        <fullName>DueDate__c</fullName>
        <formula>LearningContent__r.DueDate__c</formula>
        <label>期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LearningContent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>学習コンテンツ</label>
        <referenceTo>LearningContent__c</referenceTo>
        <relationshipLabel>学習予定記録</relationshipLabel>
        <relationshipName>LearningLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RatingNum__c</fullName>
        <formula>IF( ISPICKVAL( Rating__c, &apos;★★★★★&apos;), IF( ISPICKVAL( Rating__c, &apos;★★★★&apos;), IF( ISPICKVAL( Rating__c, &apos;★★★&apos;), IF( ISPICKVAL( Rating__c, &apos;★★&apos;), IF( ISPICKVAL( Rating__c, &apos;★&apos;), 0, 1), 2), 3), 4), 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>評価(数値)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>評価</label>
        <picklist>
            <picklistValues>
                <fullName>★★★★★</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>★★★★</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>★★★</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>★★</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>★</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ー</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StandardTIme__c</fullName>
        <formula>LearningContent__r.Time__c</formula>
        <label>学習目安時間(分)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状況</label>
        <picklist>
            <picklistValues>
                <fullName>おすすめ！</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>学習予定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>学習しました</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>学習しません</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>学習時間</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>学習予定記録</label>
    <listViews>
        <fullName>MyLog</fullName>
        <columns>LearningContent__c</columns>
        <columns>Time__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>受講しました</value>
        </filters>
        <label>学習記録</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>MyPlan</fullName>
        <columns>LearningContent__c</columns>
        <columns>Time__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>受講予定</value>
        </filters>
        <label>学習予定</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>MyRecommend</fullName>
        <columns>LearningContent__c</columns>
        <columns>Time__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>おすすめ！</value>
        </filters>
        <label>おすすめ！</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>学習予定記録名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RequiredRule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( LearningContent__r.Required__c  , ISPICKVAL( Status__c , &apos;学習しません&apos; ) )</errorConditionFormula>
        <errorMessage>必ず学習してください</errorMessage>
    </validationRules>
</CustomObject>